# downscale

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
common/: App.cpp  App.h  Native.h
demos/: USDINRX.csv  data.csv  graph.cpp  temp.csv
